# RoboRTS-SC

./: .gitignore  .travis.ci  .travis.yml  README.md
src/RoboRTS/: README.md  tags
src/RoboRTS/modules/decision/: CMakeLists.txt
src/RoboRTS/modules/decision/test_decision/: .center_pos_pub.cpp.swp  center_pos_pub.cpp  decision_node.cpp
src/RoboRTS/modules/driver/camera/: camera_node.cpp
src/RoboRTS/modules/driver/camera/config/: camera_param.prototxt
src/RoboRTS/modules/driver/serial/: serial_com_node.cpp  serial_com_test.cpp
src/RoboRTS/modules/perception/detection/yolo/: CMakeLists.txt  yolo_node.cpp
src/RoboRTS/modules/stream/messages/: CMakeLists.txt
src/RoboRTS/tools/launch/: navigation_stage.launch  navigation_test.launch
src/RoboRTS/tools/worlds/: rm.world
src/RoboRTS_Gazebo/: .gitignore  CMakeLists.txt  package.xml
src/RoboRTS_Gazebo/config/: infantry_control_copy.yaml  roborts_robot.yaml
src/RoboRTS_Gazebo/launch/: display.launch  gazebo_mapping.launch  spawn_robot.launch
src/RoboRTS_Gazebo/meshes/: laser_link.STL
src/RoboRTS_Gazebo/robots/: infantry.gazebo.xacro  infantry.urdf.xacro  infantry.xacro
src/RoboRTS_Gazebo/scripts/: roborts_robot_xacro.gv  visualizae.urdf  visualize_urdf.sh
src/RoboRTS_Gazebo/worlds/: ICRA_3D_MAP.world  ICRA_WITH_ROBOT.world
src/RoboRTS_Gazebo_Plugins/: CMakeLists.txt  RoboRTS Gazebo Plugin.md  package.xml
src/RoboRTS_Gazebo_Plugins/cfg/: UWB.cfg
src/RoboRTS_Gazebo_Plugins/src/: GazeboRosUwb.cpp  pid.h  roborts_gazebo_ros_force_based_omni_move.cpp  roborts_gazebo_ros_force_based_omni_move.h  roborts_gazebo_ros_uwb.cpp  roborts_gazebo_ros_uwb.h
(+9 files in other folders)
